--- a/.github/workflows/docker-publish-dev.yml
+++ b/.github/workflows/docker-publish-dev.yml
@@ -23,7 +23,7 @@ jobs:
         uses: docker/login-action@v3
         with:
           registry: ghcr.io
-          username: ${{ env.GITHUB_REPOSITORY_OWNER }}
+          username: ${{ github.repository_owner }}
           password: ${{ secrets.GH_TOKEN }}
 
       - name: Build and push
@@ -31,7 +31,7 @@ jobs:
         with:
           push: true
           tags: |
-            ghcr.io/${{ env.GITHUB_REPOSITORY }}:dev
+            ghcr.io/${{ github.repository }}:dev
           platforms: linux/amd64,linux/arm64/v8,linux/arm/v7
           cache-from: type=gha
           cache-to: type=gha,mode=max
