--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,8 +5,6 @@ services:
     image: ghcr.io/infinityofspace/nebula-docker:latest
     network_mode: host
     restart: unless-stopped
-    ports:
-      - "4242:4242/udp"
     cap_add:
       - NET_ADMIN
     devices:
@@ -14,4 +12,4 @@ services:
     volumes:
       - "./config/:/etc/nebula/config"
       - "./certs/:/etc/nebula/certs"
-    command: nebula -config /config/conf.yml
+    command: nebula -config /etc/nebula/config/conf.yml
